all finiched just payment and arabic

--- a/me/templates/my_p_ME.html
+++ b/me/templates/my_p_ME.html
@@ -11,7 +11,7 @@
 
 
 
-<link rel="stylesheet" href="{% static 'css/p_ME.css' %}">
+<link rel="stylesheet" href="{% static 'css/m_p_ME.css' %}">
 
 <form action="" method="POST" enctype="multipart/form-data">
 
