--- a/post/templates/create_post.html
+++ b/post/templates/create_post.html
@@ -7,7 +7,7 @@
 
 {% block Content %}
 
-<div class="container mt-5">
+<div class="container mt-5" style="color: #272E48;">
 
     
         <form action="" method="POST" enctype="multipart/form-data">
@@ -17,7 +17,7 @@
 
             <input type="hidden" name="ste" value="{{request.user.societe}}">
 
-            <input type="submit" class="btn btn-success" value="Share">
+            <input type="submit" class="btn btn-success mt-3 mb-3" value="Share">
         </form>
     
     
