--- a/post/templates/post.html
+++ b/post/templates/post.html
@@ -32,30 +32,31 @@
                         </div>
                     
                     {% endif %}
-                    <p>{{post.Description|upper}} </p>
+                    <p>{{post.Description}} </p>
                     <div class="btn-bar">
                         
+
 
                         <form action="" method="POST">
 
                             {% csrf_token %}
                         
-                            {% if request.user.me %}
-                        
-                        
-                                {% if var == 0 %}
-                        
-                                    <a href="{% url 'request' post.id %}" class="btn btn-success">Request</a>
-                                    <!-- <a href="#" class="btn btn-success">Request</a> -->
-                        
-                                
-                                {% elif var == 1 %}
-                        
-                                    <a href="{% url 'unrequest' post.id %}" class="btn btn-success">None</a>
-                        
-                                {% endif %}
+                                {% if request.user.me and  post.expiration == False %}
                             
-                            {% endif %}
+                            
+                                    {% if var == 0 %}
+                            
+                                        <a href="{% url 'request' post.id %}" class="btn btn-success">Request</a>
+                                        <!-- <a href="#" class="btn btn-success">Request</a> -->
+                            
+                                    
+                                    {% elif var == 1 %}
+                            
+                                        <a href="{% url 'unrequest' post.id %}" class="btn btn-success">None</a>
+                            
+                                    {% endif %}
+                                
+                                {% endif %}
                         </form>
                     </div>
                 </div>
@@ -66,6 +67,40 @@
                 </div>
             </div>
         </div>
+        {% if request.user.societe %}
+            <hr>
+            <div class="mt-5">
+                <div><h1>me who make request</h1></div>
+                <table class="table table-dark table-striped ">
+                    <thead>
+                    <tr>
+                        <th scope="col">{{post.count_Dommand}}</th>
+                        <th scope="col">Name</th>
+                        <th scope="col">Phone</th>
+                        <th scope="col">Domaine</th>
+                        <th scope="col">Action</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for me in mes %}
+                    <tr>
+                        <th scope="row">{{me.me.id}}</th>
+                        <td>{{me.me.full_Name}}</td>
+                        <td>{{me.me.phone}}</td>
+                        <td>{{me.me.domaine}}</td>
+                        <td>
+                            <a href="{% url 'me_profile' me.me.id  %}" data-toggle="modal" data-target=".project-modal2"><i class="fa fa-eye"></i></a>
+                        </td>
+                    </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+                            
+            
+        
+        {% endif %}
+        
     </div>
 </section>
 
