--- a/ste/templates/my_p_STE.html
+++ b/ste/templates/my_p_STE.html
@@ -9,7 +9,7 @@
 
 
 
-<link rel="stylesheet" href="{% static 'css/p_ME.css' %}">
+<link rel="stylesheet" href="{% static 'css/m_p_STE.css' %}">
 
 <form action="" method="POST" enctype="multipart/form-data">
 
