--- a/me/templates/p_ME.html
+++ b/me/templates/p_ME.html
@@ -10,81 +10,98 @@
 
 
 
-<link rel="stylesheet" href="{% static 'css/p_STE.css' %}">
+<link rel="stylesheet" href="{% static 'css/p_ME.css' %}">
 
 
-
-<section class="section about-section gray-bg " id="about">
-    <div class="container">
-        <div class="row align-items-center flex-row-reverse">
-            <div class="col-lg-6">
-                <div class="about-text go-to">
-                    <h3 class="dark-color">Profile Information</h3>
-                    <h5 class="theme-color lead">{{me.full_Name}}</h5>
-                    <p>{{me.CIN}}</p>
-                    <div class="row about-list">
-                        <div class="col-md-6">
-                            <div class="media">
-                                <label  class="fw-bold">Ville :</label>
-                                <p>{{me.ville}}</p>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="media">
-                                <label  class="fw-bold">E-mail :</label>
-                                <p>{{request.user.email}}</p>
-                            </div>
-                            <div class="media">
-                                <label  class="fw-bold">Phone :</label>
-                                <p>{{me.phone}}</p>
-                            </div>
-                        </div>
-                    </div>
+<div class="container emp-profile">
+    <form method="post">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="profile-img">
+                    <img src="{{me.photo.url}}" alt=""/>
                 </div>
             </div>
-            <div class="col-lg-6">
-                <div class="about-avatar">
-                    <img src="{{me.photo.url}}" height="500px" title="" alt="">
+            <div class="col-md-6">
+                <div class="profile-head">
+                    <ul class="nav nav-tabs" id="myTab" role="tablist">
+                        <li class="nav-item nav-item-me">
+                            <a class="nav-link active mb-3" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">About</a>
+                            <div class="col-md-8">
+                                <div class="tab-content profile-tab" id="myTabContent">
+                                    <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab" style="color:#103744;">
+                                                <div class="row">
+                                                    <div class="col-md-6">
+                                                        <label>Full Name</label>
+                                                    </div>
+                                                    <div class="col-md-6">
+                                                        <p>{{me.full_Name}}</p>
+                                                    </div>
+                                                    <hr>
+                                                </div>
+
+                                                <div class="row">
+                                                    <div class="col-md-6">
+                                                        <label>Email</label>
+                                                    </div>
+                                                    <div class="col-md-6">
+                                                        <p>{{me.user.email}}</p>
+                                                    </div>
+                                                    <hr>
+                                                </div>
+                                                <div class="row">
+                                                    <div class="col-md-6">
+                                                        <label>Phone</label>
+                                                    </div>
+                                                    <div class="col-md-6">
+                                                        <p>{{me.phone}}</p>
+                                                    </div>
+                                                    <hr>
+                                                </div>
+                                                <div class="row">
+                                                    <div class="col-md-6">
+                                                        <label>Domaine</label>
+                                                    </div>
+                                                    <div class="col-md-6">
+                                                        <p>{{me.domaine}}</p>
+                                                    </div>
+                                                    <hr>
+                                                </div>
+                                                <div class="row">
+                                                    <div class="col-md-6">
+                                                        <label>Ville</label>
+                                                    </div>
+                                                    <div class="col-md-6">
+                                                        <p>{{me.ville}}</p>
+                                                    </div>
+                                                    <hr>
+                                                </div>
+                                                <div class="row">
+                                                    <div class="col-md-6">
+                                                        <label>Busy</label>
+                                                    </div>
+                                                    <div class="col-md-6">
+                                                        <p>
+                                                            {% if me.active == false %}
+                                                                No active
+                                                            {% else %}
+                                                                Active
+                                                            {% endif %}
+                                                        </p>
+                                                    </div>
+                                                    <hr>
+                                                </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
-        <div class="counter">
-            <div class="row">
-                <div class="col-6 col-lg-3">
-                    <div class="count-data text-center">
-                        <h6 class="count h2" data-to="150" data-speed="150">
-                            {% if me.active == false %}
-                                No active
-                            {% else %}
-                                Active
-                            {% endif %}
-                        </h6>
-                        <p class="m-0px font-w-600">Active/No</p>
-                    </div>
-                </div>
-                <div class="col-6 col-lg-3">
-                    <div class="count-data text-center">
-                        <h6 class="count h2" data-to="850" data-speed="850">{{me.get_year}}</h6>
-                        <p class="m-0px font-w-600">with us </p>
-                    </div>
-                </div>
-                <div class="col-6 col-lg-3">
-                    <div class="count-data text-center">
-                        <h6 class="count h2" data-to="190" data-speed="190">
-                            {{me.domaine}}
-                        </h6>
-                        <p class="m-0px font-w-600">Domaine</p>
-                    </div>
-                </div>
-            </div>
+        <div class="row">
+           
         </div>
-    </div>
-</section>
-
-
-
-
-
-
+    </form>           
+</div>
 
 {% endblock Content %}
