--- a/ste/templates/p_STE.html
+++ b/ste/templates/p_STE.html
@@ -13,80 +13,117 @@
 
 
 <section class="section about-section gray-bg " id="about">
+
+
     <div class="container">
-        <div class="row align-items-center flex-row-reverse">
-            <div class="col-lg-6">
-                <div class="about-text go-to">
-                    <h3 class="dark-color">Profile Information</h3>
-                    <h5 class="theme-color lead">{{ste.name_STE}}</h5>
-                    <p>{{ste.desc}}</p>
-                    <div class="row about-list">
-                        <div class="col-md-6">
-                            <div class="media">
-                                <label  class="fw-bold">Web site :</label>
-                                <p>{{ste.web_Site}}</p>
-                            </div>
-                            <div class="media">
-                                <label  class="fw-bold">Ville :</label>
-                                <p>{{ste.ville}}</p>
-                            </div>
+        <div class="main-body">
+              <!-- /Breadcrumb -->
+        
+              <div class="row gutters-sm">
+                <div class="col-md-4 mb-3">
+                  <div class="card">
+                    <div class="card-body">
+                      <div class="d-flex flex-column align-items-center text-center">
+                        <img src="{{ste.photo.url}}"  alt="Admin" class="rounded-circle" width="150">
+                        <div class="mt-3">
+                          <h4>{{ste.name_STE}}</h4>
+                          <p class="text-muted font-size-sm">{{ste.domaine}}</p>
                         </div>
-                        <div class="col-md-6">
-                            <div class="media">
-                                <label  class="fw-bold">E-mail :</label>
-                                <p>{{request.user.email}}</p>
-                            </div>
-                            <div class="media">
-                                <label  class="fw-bold">Phone :</label>
-                                <p>{{ste.phone}}</p>
-                            </div>
-                        </div>
+                      </div>
                     </div>
+                  </div>
+                  <div class="card mt-3">
+                    <ul class="list-group list-group-flush">
+                      <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                        <h6 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-globe mr-2 icon-inline"><circle cx="12" cy="12" r="10"></circle><line x1="2" y1="12" x2="22" y2="12"></line><path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"></path></svg>Website</h6>
+                        <span class="text-secondary">{{ste.web_Site}}</span>
+                      </li>
+                    </ul>
+                  </div>
                 </div>
-            </div>
-            <div class="col-lg-6">
-                <div class="about-avatar">
-                    <img src="{{ste.photo.url}}" title="" alt="">
+                <div class="col-md-8">
+                  <div class="card mb-3">
+                    <div class="card-body">
+                      <div class="row">
+                        <div class="col-sm-3">
+                          <h6 class="mb-0">Nom Societe</h6>
+                        </div>
+                        <div class="col-sm-9 text-secondary">
+                            {{ste.name_STE}}
+                        </div>
+                      </div>
+                      <hr>
+                      <div class="row">
+                        <div class="col-sm-3">
+                          <h6 class="mb-0">Email</h6>
+                        </div>
+                        <div class="col-sm-9 text-secondary">
+                            {{email}}
+                        </div>
+                      </div>
+                      <hr>
+                      <div class="row">
+                        <div class="col-sm-3">
+                          <h6 class="mb-0">Phone</h6>
+                        </div>
+                        <div class="col-sm-9 text-secondary">
+                            {{ste.phone}}
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+    
+                  <div class="row gutters-sm">
+                    <div class="col-sm-12 mb-3">
+                      <div class="card h-100">
+                        <div class="card-body">
+                          <h6 class="d-flex align-items-center mb-3">Posts</h6>
+                          {% for post in page_obj %}
+                          <span class="badge bg-dark"><small>{{post.title|upper}}</small></span><span class="m-3 badge bg-warning">{{post.date_experation}}</span>
+                            <div class=" mb-3" >
+                                <p style="white-space: nowrap;overflow: hidden;text-overflow: ellipsis;">{{post.Description}}</p>
+                            </div>
+                            <div>
+                                <a href="{% url 'post' post.id %}" class="btn btn-success"> SHOW </a>
+                            </div>
+                            <hr>
+                          {% endfor%}
+                        <!-- pagination -->
+                            <div class="pagination  d-flex justify-content-center">
+                                <span class="step-links badge bg-secondary bg-dark p-2 m-3">
+                                    {% if page_obj.has_previous %}
+                                        <a href="?page=1">&laquo; first</a>
+                                        <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+                                    {% endif %}
+                            
+                                    <span class="current">
+                                        Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+                                    </span>
+                            
+                                    {% if page_obj.has_next %}
+                                        <a href="?page={{ page_obj.next_page_number }}">next</a>
+                                        <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+                                    {% endif %}
+                                </span>
+                            </div>
+
+                        <!-- pagination -->
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+    
+    
+    
                 </div>
+              </div>
+    
             </div>
         </div>
-        <div class="counter">
-            <div class="row">
-                <div class="col-6 col-lg-3">
-                    <div class="count-data text-center">
-                        <h6 class="count h2" data-to="500" data-speed="500">{{posts|length}}</h6>
-                        <p class="m-0px font-w-600">Posts</p>
-                    </div>
-                </div>
-                <div class="col-6 col-lg-3">
-                    <div class="count-data text-center">
-                        <h6 class="count h2" data-to="150" data-speed="150">
-                            {% if ste.active == false %}
-                                No active
-                            {% else %}
-                                Active
-                            {% endif %}
-                        </h6>
-                        <p class="m-0px font-w-600">Active/No</p>
-                    </div>
-                </div>
-                <div class="col-6 col-lg-3">
-                    <div class="count-data text-center">
-                        <h6 class="count h2" data-to="850" data-speed="850">{{date}}</h6>
-                        <p class="m-0px font-w-600">with us </p>
-                    </div>
-                </div>
-                <div class="col-6 col-lg-3">
-                    <div class="count-data text-center">
-                        <h6 class="count h2" data-to="190" data-speed="190">
-                            {{ste.domaine}}
-                        </h6>
-                        <p class="m-0px font-w-600">Domaine</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+
+
+
+
 </section>
 
 
