--- a/main_app/templates/main_authenticated.html
+++ b/main_app/templates/main_authenticated.html
@@ -13,6 +13,7 @@
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.6/examples/navbars/">
     <link rel="stylesheet" href="{% static 'css/main_authenticated.css' %}">
+    <link rel="stylesheet" href="{% static 'css/offers.css'%}">
 </head>
 <body >
 
