--- a/ste/templates/editInfoSTE.html
+++ b/ste/templates/editInfoSTE.html
@@ -32,7 +32,7 @@
             <div class="card bg-secondary border-secondary mb-5 mt-5">
                 <div class="card-header">Complet your Informations please !!!</div>
                 <div class="card-body">
-                    <div class="m-5">
+                    <div class="m-5">محمد
                         <div class="mt-5"><h1></h1></div>
                         <form action="" method="POST" enctype="multipart/form-data">
             
