--- a/main_app/templates/includes/navbar.html
+++ b/main_app/templates/includes/navbar.html
@@ -27,6 +27,9 @@
           <a class="nav-link" style="color:#effbff;"  href="{% url 'contact_us' %}">Contact-US</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" style="color:#effbff;"  href="{% url 'offers' %}">Offers</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" style="color:#effbff;"  href="{% url 'login' %}">Login</a>
         </li>
         <li class="nav-item">
