--- a/main_app/templates/includes/navbar_auth.html
+++ b/main_app/templates/includes/navbar_auth.html
@@ -35,6 +35,9 @@
           <a class="nav-link" style="color:#effbff;"  href="{% url 'materiels' %}">Material</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" style="color:#effbff;"  href="{% url 'offers' %}">Offers</a>
+        </li>
+        <li class="nav-item">
           {% if request.user.me %}
               <a class="nav-link" style="color:#effbff;"  href="{% url 'me_myprofile' %}">Profile ME</a>
           {% endif %}
